@@ -1,7 +1,7 @@
 package com.robertx22.mine_and_slash.database.serialization.affixes;
 
 import com.robertx22.mine_and_slash.database.affixes.BaseAffix;
-import com.robertx22.mine_and_slash.database.serialization.statmods.BaseDataPackManager;
+import com.robertx22.mine_and_slash.database.serialization.BaseDataPackManager;
 import com.robertx22.mine_and_slash.db_lists.registry.SlashRegistry;
 import com.robertx22.mine_and_slash.db_lists.registry.SlashRegistryType;
 import com.robertx22.mine_and_slash.db_lists.registry.empty_entries.EmptyAffix;
