@@ -1,6 +1,6 @@
 package com.robertx22.mine_and_slash.database.serialization.sets;
 
-import com.robertx22.mine_and_slash.database.serialization.statmods.BaseDataPackManager;
+import com.robertx22.mine_and_slash.database.serialization.BaseDataPackManager;
 import com.robertx22.mine_and_slash.database.sets.Set;
 import com.robertx22.mine_and_slash.db_lists.registry.SlashRegistry;
 import com.robertx22.mine_and_slash.db_lists.registry.SlashRegistryType;
